--- a/DesignAssignmentFinalResponsive/css/reset.css
+++ b/DesignAssignmentFinalResponsive/css/reset.css
@@ -2,12 +2,12 @@
     margin: 0;
     padding: 0;
 }
-.img{
-    display: block;
-    width: 100%;
+img{
+    max-width: 100%;
 }
 .clearfix::after {
     content: "";
     clear: both;
     display: table;
 }
+
