--- a/JSPROJECT/BoxCollisionAntSmash/style.css
+++ b/JSPROJECT/BoxCollisionAntSmash/style.css
@@ -9,6 +9,6 @@
   position: relative;
 }
 .box {
-  background-image: url("anttttt.jpg") red;
+  background-image: url("antwalk50px.gif");
   position: absolute;
 }
